Minor cleanup in main config.

--- a/config.yaml
+++ b/config.yaml
@@ -5,10 +5,14 @@
 # false -> run locally, no pbs
 # if run by run_all*, it is set automatically
 run_on_metacentrum: False
+metacentrum:
+  walltime: 02:00:00
+  memory: 12gb
+  queue: charon_2h
+  name: TSX_bayes
+  workspace_rel: ../../workspace
 
-# number of samples
-#n_samples: 1
-#task_size: 0.001
+
 collect_only: False
 mesh_only: False
 make_plots: False
@@ -16,10 +20,10 @@ make_plots: False
 clean_sample_dir: True
 
 copy_files: [config.yaml, config_mcmc_bayes.yaml, flow123d_simulation.py,
-             A01_hm_tmpl.yaml,
+#             A01_hm_tmpl.yaml,
              A02_hm_tmpl.yaml,
 #             B02ustaleni_hm_tmpl.yaml,
-              B02long_hm_tmpl.yaml,
+#              B02long_hm_tmpl.yaml,
               tunnel_mesh_cut_healed.msh]
 
 # The flow executable and arguments to use.
@@ -48,54 +52,21 @@ local:
   gmsh_executable:
     - /home/paulie/Workspace/Endorse-2Dtest-Bayes/venv/bin/gmsh
 
-metacentrum:
-  walltime: 02:00:00
-  memory: 12gb
-  queue: charon_2h
-  name: TSX_bayes
-  workspace_rel: ../../workspace
-
-#metacentrum:
-#  flow_executable:
-#  # release
-#    #- /storage/liberec3-tul/home/jan_brezina/workspace/flow123d/bin/flow123d
-#    #- '/storage/liberec3-tul/home/pavel_exner/workspace/flow123d/build-PE_wgc2020/bin/mpiexec'
-#    #- '-np'
-#    #- '10'
-#    - '/storage/liberec3-tul/home/pavel_exner/workspace/flow123d/build-PE_wgc2020/bin/flow123d'
-#  # debug
-#  #- /storage/liberec3-tul/home/jan_brezina/workspace/flow-dbg/flow123d/bin/flow123d
-#  gmsh_executable:
-#    #- /storage/liberec3-tul/home/martin_spetlik/astra/gmsh/bin/gmsh
-#    - /storage/liberec3-tul/home/pavel_exner/WGC2020-THM-MC/wgc2020_model/env/bin/gmsh
-
-
-start_time: &start_time 0
-end_time: &end_time 365
-output_times: &output_times
-  - {begin: *start_time, step: 10, end: 18}
-  - {begin: 18, step: 10, end: 100}
-  - {begin: 100, step: 20, end: *end_time}
-
-# SHORT TESTING time axis
+# FULL time axis
 #start_time: &start_time 0
-#end_time: &end_time 30
+#end_time: &end_time 365
 #output_times: &output_times
 #  - {begin: *start_time, step: 10, end: 18}
-#  - {begin: 18, step: 5, end: *end_time}
+#  - {begin: 18, step: 10, end: 100}
+#  - {begin: 100, step: 20, end: *end_time}
 
-geometry:
-  # depth of the center of the box and of the coordinate system
-  # x,y,z dimension
-  box_dimensions: [100, 100]
-  # tunnel center
-  tunnel_center: [0, 0, 0]
-  tunnel_dimX: &tunnel_dimX 4.375 # X cross-section
-  tunnel_dimY: &tunnel_dimY 3.5 # X cross-section
-  tunnel_mesh_step: 0.5
+# SHORT TESTING time axis
+start_time: &start_time 0
+end_time: &end_time 30
+output_times: &output_times
+  - {begin: *start_time, step: 10, end: 18}
+  - {begin: 18, step: 5, end: *end_time}
 
-# base of the mesh file name
-mesh_name: tunnel_mesh
 
 # KEEP THE ORDER SAME AS IN MCMC CONFIG!
 mcmc_parameters:
@@ -111,6 +82,19 @@ mcmc_observe_point:
   - HGT1-4
   - HGT2-4
   - HGT2-3
+
+geometry:
+  # depth of the center of the box and of the coordinate system
+  # x,y,z dimension
+  box_dimensions: [100, 100]
+  # tunnel center
+  tunnel_center: [0, 0, 0]
+  tunnel_dimX: &tunnel_dimX 4.375 # X cross-section
+  tunnel_dimY: &tunnel_dimY 3.5 # X cross-section
+  tunnel_mesh_step: 0.5
+
+# base of the mesh file name
+mesh_name: tunnel_mesh
 
 # parameters substituted into the HM model template
 hm_params:
