--- a/config.yaml
+++ b/config.yaml
@@ -48,7 +48,8 @@ local:
   gmsh_executable:
     - /home/paulie/Workspace/Endorse-2Dtest-Bayes/venv/bin/gmsh
 
-# smooth_factor: 5e-6
+# lower smoother
+#smooth_factor:  5e-4 #1e-2 #1e-4 #1e-5 #1e-6 #5e-6
 
 # FULL time axis
 start_time: &start_time 0
@@ -71,6 +72,11 @@ output_times: &output_times
 surrDAMH_parameters:
   config_file: &config_bayes config_mcmc_bayes.yaml
   parameters:
+    - name: perm_kr
+      type: normal_to_lognormal
+      options:
+        mu: -48.865
+        sigma: 2.0
     - name: perm_km
       type: normal_to_lognormal
       options:
@@ -96,11 +102,17 @@ surrDAMH_parameters:
 #      options:
 #        mu: -16.434
 #        sigma: 1.0
-#    - name: young_modulus
-#      type: normal_to_lognormal
-#      options:
-#        mu: 24.817
-#        sigma: 1.0
+    - name: young_modulus
+      type: normal_to_lognormal
+      options:
+        mu: 24.817
+        sigma: 1.0
+    - name: young_modulus_1
+      type: normal_to_lognormal
+      options:
+        mu: 24.124
+        sigma: 1.0
+
 #    - name: init_stress_x
 #      type: normal_to_lognormal
 #      options:
@@ -122,15 +134,16 @@ geometry:
   tunnel_center: [0, 0, 0]
   tunnel_dimX: &tunnel_dimX 4.375 # X cross-section
   tunnel_dimY: &tunnel_dimY 3.5 # Y cross-section
-  tunnel_mesh_step: 0.5 # 0.125 # 0.5
-  max_elem_size: 10 # 3.7
+  tunnel_mesh_step: 0.25 # 0.0625 # 0.25 # 0.125 # 0.5
+  max_elem_size: 10 # 5 # 10 # 3.7
 
 # parameters substituted into the HM model template
 hm_params:
     mesh: tunnel_mesh.msh # healed mesh is used at the end (programmatically replaced)
 #    in_file: A01_hm
 #    in_file: A02_hm
-    in_file: A03_hm
+#    in_file: A03_hm
+    in_file: A04_hm
 #    in_file: B02long_hm
 #    in_file: B02ustaleni_hm
 
@@ -149,6 +162,7 @@ hm_params:
     # permeability k=6e-22 m2, dyn. viscosity mu=0.001 Pa.s, g=9.81 m.s-2
     bulk_conductivity: 5.886E-15  # K = k * rho * g /mu
     young_modulus: 60e9
+    young_modulus_1: 30e9
     poisson_ratio: 0.2
     init_stress_x: 45e6
 
@@ -176,6 +190,7 @@ copy_files:
   - config_mcmc_bayes.yaml
   - flow123d_simulation.py
   - A03_hm_tmpl.yaml
+  - A04_hm_tmpl.yaml
 #             A01_hm_tmpl.yaml,
 #             A02_hm_tmpl.yaml,
 #             B02ustaleni_hm_tmpl.yaml,
