--- a/config.yaml
+++ b/config.yaml
@@ -103,13 +103,17 @@ surrDAMH_parameters:
 #        mu: -16.434
 #        sigma: 1.0
     - name: young_modulus
-      type: None
+      type: null
       options:
+        mu: 60e9
+        sigma: 20e9
 #        mu: 24.817
 #        sigma: 1.0
     - name: young_modulus_1
-      type: None
+      type: null
       options:
+        mu: 30e9
+        sigma: 20e9
 #        mu: 24.124
 #        sigma: 1.0
 
