Adaptive choice of MCMC proposal
Bayes example configuration file: config_mcmc_bayes_adaptive.yaml
Adaptive choice of proposal covariance matrix is in stage 2 that uses only surrogate model. However, exact model can be used too.

--- a/config.yaml
+++ b/config.yaml
@@ -71,7 +71,7 @@ output_times: &output_times
 
 
 surrDAMH_parameters:
-  config_file: &config_bayes config_mcmc_bayes.yaml
+  config_file: &config_bayes config_mcmc_bayes_adaptive.yaml
   parameters:
     - name: perm_kr
       type: normal_to_lognormal
