Minor update for 3.9.1.

--- a/A03_hm_tmpl.yaml
+++ b/A03_hm_tmpl.yaml
@@ -1,4 +1,4 @@
-flow123d_version: 3.1.0
+flow123d_version: 3.9.1
 problem: !Coupling_Sequential
   description: Model of tunnel surroundings relaxation after boring.
   mesh:
@@ -18,7 +18,7 @@ problem: !Coupling_Sequential
       common_time_unit: d
     iteration_parameter: 1 # affects convergence of HM coupling (defaults to 1, lower value sometimes helps)
     a_tol: 0
-    r_tol: 1e-8
+    r_tol: 1e-7
     flow_equation: !Flow_Richards_LMH
         nonlinear_solver:
           linear_solver: !Petsc
@@ -62,6 +62,7 @@ problem: !Coupling_Sequential
         output:
           times: <output_times>
           fields: []
+#            - { field: conductivity, interpolation: P1_average }
 #            - piezo_head_p0
 #            - pressure_p0
 #            - velocity_p0
@@ -86,9 +87,11 @@ problem: !Coupling_Sequential
           times: <output_times>
           fields: []
 #            - { field: displacement, interpolation: P1_average }
-#            - displacement
 #            - stress
 #            - displacement_divergence
+#            - mean_stress
+#            - von_mises_stress
+#            - initial_stress
 #            - region_id
 #          observe_fields: [displacement]
         solver: !Petsc
