--- a/A04_hm_tmpl.yaml
+++ b/A04_hm_tmpl.yaml
@@ -1,4 +1,4 @@
-flow123d_version: 3.1.0
+flow123d_version: 3.9.1
 problem: !Coupling_Sequential
   description: Model of tunnel surroundings relaxation after boring.
   mesh:
@@ -16,9 +16,9 @@ problem: !Coupling_Sequential
       end_time: <end_time>
       # common time unit cannot be used in field formulas
       common_time_unit: d
-    iteration_parameter: 10000 # affects convergence of HM coupling (defaults to 1, lower value sometimes helps)
+    iteration_parameter: 1 # affects convergence of HM coupling (defaults to 1, lower value sometimes helps)
     a_tol: 0
-    r_tol: 1e-8
+    r_tol: 1e-7
     flow_equation: !Flow_Richards_LMH
         nonlinear_solver:
           linear_solver: !Petsc
@@ -114,6 +114,7 @@ problem: !Coupling_Sequential
             - von_mises_stress
             - initial_stress
             - region_id
+            - young_modulus
 #          observe_fields: [displacement]
         solver: !Petsc
           a_tol: <mechanics_solver__a_tol>
