--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,3 @@
-# keeps computed results in dirs
-#debug: True
-
 # true -> work with pbs on metacentrum
 # false -> run locally, no pbs
 # if run by run_all*, it is set automatically
@@ -9,19 +6,19 @@ metacentrum:
   chunks: 2
   ncpus_per_chunk: 20 # max 20 cpus per node(chunk)
   walltime: 02:00:00
-  memory: 12gb
-  queue: charon_2h
+  memory: 8gb
+  queue: charon
   name: TSX_bayes
   workspace_rel: ../../workspace
 
 
 collect_only: False
 mesh_only: False
-make_plots: False
+make_plots: True
 
-clean_sample_dir: True
+clean_sample_dir: False
 
-run_best_n_accepted: 30
+run_best_n_accepted: 2
 
 # The flow executable and arguments to use.
 local:
@@ -73,48 +70,65 @@ output_times: &output_times
 surrDAMH_parameters:
   config_file: &config_bayes config_mcmc_bayes.yaml
   parameters:
-    - name: perm_kr
-      type: normal_to_lognormal
-      options:
-        mu: -48.865
-        sigma: 2.0
-    - name: perm_km
-      type: normal_to_lognormal
-      options:
-        mu: -37.064
-        sigma: 2.0
-    - name: perm_beta
-      type: normal_to_lognormal
-      options:
-        mu: -14.732
-        sigma: 2.0
-    - name: perm_gamma
-      type: normal_to_lognormal
-      options:
-        mu: -15.019
-        sigma: 2.0
-#    - name: bulk_conductivity
+#    - name: biot_coefficient
 #      type: normal_to_lognormal
 #      options:
 #        mu: -32.766
-#        sigma: 1.0
-#    - name: storativity
+#        sigma: 2.0
+    - name: bulk_conductivity
+      type: normal_to_lognormal
+      options:
+        mu: -32.766
+        sigma: 2.0
+    - name: storativity
+      type: normal_to_lognormal
+      options:
+        mu: -16.434
+        sigma: 1.0
+    - name: young_modulus
+      type: normal_to_lognormal
+      options:
+        mu: 24.817
+        sigma: 1.0
+    - name: init_stress_x
+      type: normal_to_lognormal
+      options:
+        mu: 17.622
+        sigma: 1.0
+
+#    - name: perm_kr
 #      type: normal_to_lognormal
 #      options:
-#        mu: -16.434
-#        sigma: 1.0
-    - name: young_modulus
-      type: null
-      options:
-        mu: 60e9
-        sigma: 20e9
+#        mu: -48.865
+#        sigma: 2.0
+#    - name: perm_km
+#      type: normal_to_lognormal
+#      options:
+#        mu: -37.064
+#        sigma: 2.0
+#    - name: perm_beta
+#      type: normal_to_lognormal
+#      options:
+#        mu: -14.732
+#        sigma: 2.0
+#    - name: perm_gamma
+#      type: normal_to_lognormal
+#      options:
+#        mu: -15.019
+#        sigma: 2.0
+
+#    - name: young_modulus
+#      type: null
+#      options:
+#        mu: 60e9
+#        sigma: 20e9
 #        mu: 24.817
 #        sigma: 1.0
-    - name: young_modulus_1
-      type: null
-      options:
-        mu: 30e9
-        sigma: 20e9
+#    - name: young_modulus_1
+#      type: null
+#      options:
+#        mu: 30e9
+#        sigma: 20e9
 #        mu: 24.124
 #        sigma: 1.0
 
@@ -146,9 +160,9 @@ geometry:
 hm_params:
     mesh: tunnel_mesh.msh # healed mesh is used at the end (programmatically replaced)
 #    in_file: A01_hm
-#    in_file: A02_hm
+    in_file: A02_hm
 #    in_file: A03_hm
-    in_file: A04_hm
+#    in_file: A04_hm
 #    in_file: C04_hm
 #    in_file: B02long_hm
 #    in_file: B02ustaleni_hm
@@ -178,6 +192,12 @@ hm_params:
     perm_beta: 4e-7
     perm_gamma: 3e-7
 
+    # heterogenous conductivity
+    kx2: 1e-12
+    kx1: 6e-15
+    ky2: 1e-10
+    ky1: 6e-15
+
 # solver's settings
     mechanics_solver__a_tol: 0
     mechanics_solver__r_tol: 1e-12
@@ -195,11 +215,7 @@ copy_files:
   - *config_bayes
   - config_mcmc_bayes.yaml
   - flow123d_simulation.py
+  - A02_hm_tmpl.yaml
   - A03_hm_tmpl.yaml
   - A04_hm_tmpl.yaml
   - C04_hm_tmpl.yaml
-#             A01_hm_tmpl.yaml,
-#             A02_hm_tmpl.yaml,
-#             B02ustaleni_hm_tmpl.yaml,
-#              B02long_hm_tmpl.yaml,
-#              tunnel_mesh_cut_healed.msh
