Minor fix for visualization runnning.

--- a/config.yaml
+++ b/config.yaml
@@ -16,6 +16,7 @@ collect_only: False
 mesh_only: False
 make_plots: True
 
+# if True, it removes sample dir right after the sample is collected
 clean_sample_dir: False
 
 run_best_n_accepted: 2
