--- a/A03_hm_tmpl.yaml
+++ b/A03_hm_tmpl.yaml
@@ -67,7 +67,7 @@ problem: !Coupling_Sequential
 #            - pressure_p0
 #            - velocity_p0
 #            - region_id
-          observe_fields: [pressure_p0]
+          observe_fields: [pressure_p0, conductivity]
         #balance:
           #cumulative: true
         output_stream:
@@ -78,6 +78,10 @@ problem: !Coupling_Sequential
             - { name: HGT1-4, point: [ 0, 5.75, 0 ] }  # HGT1-4: 3.5/2 + 4
             - { name: HGT2-4, point: [ 3.6875, 0, 0 ] }  # HGT2-4: 4.375/2 + 1.5
             - { name: HGT2-3, point: [ 6.1875, 0, 0 ] }  # HGT2-3: 4.375/2 + 4
+            - { name: V01_cond, point: [ 0, 1.75, 0 ] }  # : 3.5/2
+            - { name: V02_cond, point: [ 0, 2.15, 0 ] }  # : 3.5/2 + 0.4
+            - { name: H01_cond, point: [ 2.1875, 0, 0 ] }  # : 4.375/2
+            - { name: H02_cond, point: [ 2.7875, 0, 0 ] }  # : 4.375/2 + 0.6
     mechanics_equation:
         output_stream:
           file: mechanics.pvd
